--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My Webpage!</title>
+		<title>My Web Page!</title>
 	</head>
 	<body>
 		Hello, World! Hello Again! Hello a third time!
